ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario
spec:
  rules:
  - host: mario.kub.sspcloud.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mario
            port: 
              number: 80
